2010-11-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Fixed prototypes for
	  pandora_query_tcp and pandora_query_snmp.

2010-11-05  Sancho Lerena <slerena@artica.es>

	* Makefile.PL: Now install libs on the same place that RPM

	* pandora_server.spec: Updated version

	* lib/PandoraFMS/Config.pm: UPdated version.

	* pandora_server.redhat.spec: Version update.

	* util/pandora_sync_db.pl: Removed tevento from sync.

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Merged from trunk. limpia_cadena removes
	  unwanted characters instead or replacing them with blank spaces.

2010-11-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Added the synchronization
	script to the 3.1 adapted from trunk

2010-10-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a bug that made the server crash when
	  trying to match an alert with an invalid regular expression. Merged
	  from trunk.
	
	* lib/PandoraFMS/Tools.pm: Fixed a typo.

2010-10-22  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Enforce HTML decoding on tcp send
	and receive parameters.

	* lib/PandoraFMS/Config.pm: Fixed parsing mta_from.

	* lib/PandoraFMS/Tools.pm: Enforce HTML decoding of mail subject & text.

2010-10-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Update module configuration from XML
	  data files. Merged from trunk.

2010-10-13  Sancho Lerena <slerena@artica.es>

    * Core.pm: Force XML::Simple to use XML::Parser instead SAX to manage XML
    due a bug processing some XML with blank spaces.

    * DataServer.pm: Checking for BADXML is 2 times with 2 secs of delay now. 
    Aditional check before deleting / procesing XML.

2010-09-08  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/SNMPServer.pm
	lib/PandoraFMS/Core.pm: SNMP Trap console doesnt send trap value to
	alert function. Now does :-). Ported from Trunk version.

