@@ -1,3 +1,9 @@
+2010-11-05  Sergio Martin <sergio.martin@artica.es>
+
+	* util/pandora_sync_db.pl: Changed the tevento table
+	synchronization to sync it only when the flag sync_data 
+	is 1. Merged from trunk
+
 2010-11-05  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/NetworkServer.pm: Fixed prototypes for
